# ML-from-Scratch

./: .gitignore  README.md  pyproject.toml  requirements.txt
data_bases/: get_database.py
examples/: __init__.py  decision_tree.py  gaussian_decision_tree.py  k_means.py  k_nearest_neighbors.py  linear_regression.py  logistic_regression.py  naive_bayes.py  niave_bayes.py  random_forest.py  support_vector_machines.py
examples/utils/: plotting_regression_and_classification.py
ml_from_scratch/: __init__.py
ml_from_scratch/algorithms/: __init__.py
ml_from_scratch/algorithms/supervised/: decision_tree.py  gaussian_decision_tree.py  k_nearest_neighbors.py  linear_regression.py  logistic_regression.py  naive_bayes.py  niave_bayes.py  random_forest.py  support_vector_machines.py
ml_from_scratch/algorithms/unsupervised/: __init__.py  k_means.py
ml_from_scratch/algorithms/unsupervised/clustering/: __init__.py  k_means.py
ml_from_scratch/algorithms/unsupervised/dimensionality_reduction/: pca.py
ml_from_scratch/utils/: __init__.py  activation_functions.py  detect_backend.py  math.py  validate_inputs.py
ml_from_scratch/utils/metrics/: __init__.py  classification_metrics.py  distance_metrics.py  regression_metrics.py
ml_from_scratch/utils/nodes/: tree_nodes.py
